--- a/style.css
+++ b/style.css
@@ -35,17 +35,34 @@ a {
   flex-direction: column;
   align-items: center;
   margin: 100px 0;
+  
 }
 
 .card {
   background-color: var(--very-dark-blue);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   width: 400px;
   height: 400px;
   padding: 35px;
   border-radius: 25px;
+  overflow: hidden;
+  z-index: -1;
+  position: relative;
+}
+
+.semi-circle {
+  background-color: var(--dark-blue);
+  width: 330px;
+  height: 330px;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 250px;
+}
+
+.card-content {
+  z-index: 1;
 }
 
 #rating .icon, #rating .num-item {
@@ -57,6 +74,10 @@ a {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+}
+
+#rating .text, #rating .num-list, #rating .btn-submit {
+  padding-top: 30px;
 }
 
 .num-list {
