--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   font-size: 15px;
   font-family: 'Kumbh Sans', sans-serif;
   font-family: 'Overpass', sans-serif;
-  background-color: #1f1f1f;
+  background-color: #000000;
 }
 
 a {
@@ -59,6 +59,8 @@ a {
   border-radius: 50%;
   position: absolute;
   bottom: 250px;
+  opacity: 0.1;
+  box-shadow: 0 15px 400px 0 var(--dark-blue);
 }
 
 .card-content {
