--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ a {
   text-decoration: none;
 }
 
-#thanks {
-  display: none;
+#rating {
+  /* display: none; */
 }
 
 .container {
@@ -85,6 +85,9 @@ a {
 
 #rating .text, #rating .num-list, #rating .btn-submit {
   padding-top: 30px;
+  letter-spacing: 0.5px;
+  font-size: 14px;
+  line-height: 25px;
 }
 
 .num-list {
@@ -94,6 +97,7 @@ a {
 
 .text h2 {
   color: var(--white);
+  letter-spacing: 1.5px;
 }
 
 .text p, .num-list a {
@@ -112,12 +116,52 @@ a {
   border-radius: 30px;
   width: 100%;
   height: 40px;
+  letter-spacing: 1.5px;
 }
 
 .btn-submit button:hover{
   background-color: var(--white);
   color: var(--orange);
   cursor: pointer;
+}
+
+#thanks {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 25px;
+}
+
+.ilustration {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  width: 330px;
+  height: 115px;
+  align-items: center;
+  justify-content: center;
+}
+
+.selected h4 {
+  color: var(--orange);
+  background-color: var(--dark-blue);
+  height: 30px;
+  border-radius: 20px;
+  margin: 30px 65px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0.5px;
+}
+
+#thanks .text h2 {
+  margin-bottom: 20px;
+  letter-spacing: 1px;
+}
+
+#thanks .text p {
+  letter-spacing: 0.5px;
+  font-size: 14px;
+  line-height: 20px;
 }
 
 .attribution {
@@ -134,3 +178,5 @@ a {
 .attribution a:hover {
   color: var(--light-grey);
 }
+
+
